--- a/src/styles/media-main-pagination.less
+++ b/src/styles/media-main-pagination.less
@@ -2,33 +2,35 @@
     @font-size_main: 15px;
     body {
         #main { 
-            .pagination {
-                .pagination-wrapper {
-                    .pagination-section {
-                        a {
-                            div {
+            .page-array-products-cards, .page-parts-list-pdf {
+                .pagination {
+                    .pagination-wrapper {
+                        .pagination-section {
+                            a {
+                                div {
+                                    height: 25px;
+                                    line-height: 25px;
+                                    min-width: 25px;
+                                    font-size: @font-size_main;  
+                                }   
+                            }
+                            .active {
+                                .active-block {
+                                    font-size: @font-size_main + 1px;
+                                }
+                            }
+                            .space {
                                 height: 25px;
                                 line-height: 25px;
-                                min-width: 25px;
-                                font-size: @font-size_main;  
-                            }   
-                        }
-                        .active {
-                            .active-block {
+                                min-width: 25px;  
+                            }
+                            a:hover div {
                                 font-size: @font-size_main + 1px;
                             }
                         }
-                        .space {
-                            height: 25px;
-                            line-height: 25px;
-                            min-width: 25px;  
-                        }
-                        a:hover div {
-                            font-size: @font-size_main + 1px;
-                        }
                     }
                 }
-            }
+            }   
         }
     }
 }
@@ -36,33 +38,35 @@
     @font-size_main: 13px;
     body {
         #main { 
-            .pagination {
-                .pagination-wrapper {
-                    .pagination-section {
-                        a {
-                            div {
+            .page-array-products-cards, .page-parts-list-pdf {
+                .pagination {
+                    .pagination-wrapper {
+                        .pagination-section {
+                            a {
+                                div {
+                                    height: 25px;
+                                    line-height: 25px;
+                                    min-width: 25px;
+                                    font-size: @font-size_main;  
+                                }   
+                            }
+                            .active {
+                                .active-block {
+                                    font-size: @font-size_main + 1px;
+                                }
+                            }
+                            .space {
                                 height: 25px;
                                 line-height: 25px;
-                                min-width: 25px;
-                                font-size: @font-size_main;  
-                            }   
-                        }
-                        .active {
-                            .active-block {
+                                min-width: 25px;  
+                            }
+                            a:hover div {
                                 font-size: @font-size_main + 1px;
                             }
                         }
-                        .space {
-                            height: 25px;
-                            line-height: 25px;
-                            min-width: 25px;  
-                        }
-                        a:hover div {
-                            font-size: @font-size_main + 1px;
-                        }
                     }
                 }
-            }
+            }    
         }
     }
 }
