--- a/src/styles/main-handbook.less
+++ b/src/styles/main-handbook.less
@@ -1,6 +1,6 @@
 body {
     #main { 
-        .page-array-products-cards, .page-parts-list-pdf, .page-cards-goods {
+        .page-array-products-cards, .page-parts-list-pdf, .page-cards-goods, .page-general {
             padding: 0;
             margin: 0;
             .handbook {
@@ -22,7 +22,7 @@ body {
                             color: @color_black_main;
                             text-transform: uppercase;
                             font-size: @font-size_main + 3px;
-                            font-family: 'Roboto', sans-serif;
+                            font-family: 'Montserrat', sans-serif;
                             font-weight: 500;
                             letter-spacing: 0px;
                             word-spacing: 5px;
