--- a/src/styles/main-page-parts-list-brand.less
+++ b/src/styles/main-page-parts-list-brand.less
@@ -23,7 +23,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
@@ -91,7 +91,6 @@ body {
                                 padding: 0;
                                 margin: 0;
                                 color: @color_white_main;
-                                // padding-top: 5px;
                                 letter-spacing: 3px;
                                 text-transform: uppercase;
                                 font-size: @font-size_main + 8px;
@@ -100,10 +99,10 @@ body {
                                 text-transform: uppercase;
                                 letter-spacing: 1px;
                                 word-spacing: 7px;
-                                transition: linear 0.5s;
                                 height: 37px;
                                 width: 100%;
                                 line-height: 37px;
+                                transition: linear 0.5s;
                             }
                             .content2-block-star { 
                                 width: 100%;  
@@ -114,10 +113,10 @@ body {
                                     margin: 0;
                                     color: @color_white_main;
                                     -webkit-text-stroke: 1px @color_white_main;
-                                    font-size: @font-size_main - 10px;
-                                    transition: linear 0.5s; 
+                                    font-size: @font-size_main - 10px; 
                                     vertical-align:middle;
                                     display:inline-block;
+                                    transition: linear 0.5s;
                                 }
                             }
                             .content2-partslist-text {
@@ -129,10 +128,10 @@ body {
                                 text-transform: uppercase;
                                 letter-spacing: 1px;
                                 word-spacing: 5px;
-                                transition: linear 0.5s;
                                 height: 30px;
                                 width: 100%;
                                 line-height: 30px;
+                                transition: linear 0.5s;
                             }
                         }
                     } 
@@ -146,11 +145,11 @@ body {
                         transition: linear 0.5s;            
                     }   
                     .content2-partslist-section:hover a .content2-block-star .fa-star {
-                        transition: linear 0.5s;
+                        
                         color: @color_yellow_main;
                         padding-left: 2px;
-                        padding-right: 2px;
-                        font-size: @font-size_main - 10px;               
+                        padding-right: 2px; 
+                        transition: linear 0.5s;              
                     }
                     .content2-partslist-section:hover a .content2-partslist-text {
                         color: @color_yellow_main;
