--- a/src/styles/media-main-handbook.less
+++ b/src/styles/media-main-handbook.less
@@ -3,7 +3,7 @@
     @font-size_main: 15px;
     body {
         #main {
-            .page-array-products-cards, .page-parts-list-pdf, .page-cards-goods {
+            .page-array-products-cards, .page-parts-list-pdf, .page-cards-goods, .page-general {
                 .handbook{
                     .handbook-button-wrapper  {
                         .handbook-description{
@@ -32,7 +32,7 @@
     @font-size_main: 13px;
     body {
         #main {
-            .page-array-products-cards, .page-parts-list-pdf, .page-cards-goods {
+            .page-array-products-cards, .page-parts-list-pdf, .page-cards-goods, .page-general {
                 .handbook{
                     .handbook-button-wrapper  {
                         .handbook-description{
