--- a/src/styles/media-main-helpful.less
+++ b/src/styles/media-main-helpful.less
@@ -1,21 +1,22 @@
 @media (min-width: 540px) and (max-width: 760px) {
+    @font-size_main: 15px;
     body {
         #main { 
             .helpful {
                 .helpful-description {
                     .helpful-title{
-                        font-size: @font-size_main + 8px;
+                        font-size: @font-size_main + 10px;
                     }
                     .helpful-text {   
                         padding: 20px 15px 0px 15px;
-                        font-size: @font-size_main - 2px;
+                        font-size: @font-size_main;
                     }
                 }
                 .helpful-section {
                     .helpful-section-menu {
                         a .menu-block-text {
                             .helpful-menu-text {
-                                font-size: @font-size_main - 2px;
+                                font-size: @font-size_main;
                             }
                         }     
                     }
@@ -26,23 +27,24 @@
 }
 
 @media all and (max-width: 539px) {
+    @font-size_main: 13px;
     body {
         #main { 
             .helpful {
                 .helpful-description {
                     .helpful-title{
-                        font-size: @font-size_main + 6px;
+                        font-size: @font-size_main + 10px;
                     }
                     .helpful-text {   
                         padding: 20px 15px 0px 15px;
-                        font-size: @font-size_main - 4px;
+                        font-size: @font-size_main;
                     }
                 }
                 .helpful-section {
                     .helpful-section-menu {
                         a .menu-block-text {
                             .helpful-menu-text {
-                                font-size: @font-size_main - 3px;
+                                font-size: @font-size_main + 1px;
                             }
                         }     
                     }
