--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -20,8 +20,8 @@ body {
                 min-width: 300px;    
             }
             .box h4 {
-                font-family: 'Roboto', sans-serif;
-                font-weight: 300;
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 400;
                 font-size: @font-size_main + 2px;
                 color: @color_white_main; 
                 text-transform: uppercase;
@@ -29,20 +29,18 @@ body {
                 border-bottom: 2px solid @color_dlue_tone_four_main;
                 position: relative;
                 margin-bottom: 16px;
-                transition: linear 0.5s;
+                transition: linear 0.2s; 
             }
             .box:hover h4 {
                 color: @color_yellow_main;
-                transition: linear 0.5s;
+                transition: linear 0.2s;
             }
             .box h4::before {
                 content: "";
-                // width: 130px;
                 width: 50%;
                 height: 100%;
                 border-bottom: 2px solid @color_yellow_main;
                 position: absolute;
-                // margin-left: 25%;
             }
             .box p {
                 font-family: 'Roboto', sans-serif;
@@ -51,97 +49,73 @@ body {
                 padding-bottom: 5px;
             }
             .box .social {
-                // width: 100%;
                 max-width: 280px;
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                
                 margin-top: 5px;
             }
             .box .social a {
-                
-                // line-height: 40px;
-                // color: @color_white_main;
                 text-decoration: none;
                 display: inline-block;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 300;
-                font-size: @font-size_main;////////////////////
-                transition: linear 0.5s;
-               
+                font-size: @font-size_main;
+                transition: linear 0.2s;
             } 
             .box .social a i {
                 background: @color_black_main;
                 width: 45px;
                 height: 40px;
-                
-                // width: 45px;
-                // height: 40px;
                 text-align: center;
                 line-height: 37px;
-                // margin-right: 10px;
-  
-
-
                 border-radius: 5px;
                 border: 1px solid @color_dlue_tone_five_main;
                 color: @color_dlue_tone_five_main;
-                font-size: @font-size_main + 10px;////////////////////
-                
-                transition: linear 0.5s;
+                font-size: @font-size_main + 10px;
+                transition: linear 0.2s;
             } 
-            
             .box .social a:hover i {
                 border: 1px solid @color_yellow_main; 
                 color: @color_yellow_main;
-                transition: linear 0.5s; 
+                transition: linear 0.2s; 
             }
             .box .address a {
-                
                 display: block;
                 text-decoration: none;
                 width: 100%;
-               
-                
                 height: 40px;
-                // background: rgb(158, 158, 15);
-                
                 line-height: 40px;
                 padding-left: 55px;
                 margin-bottom: 16px;
                 color: @color_white_main;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 300;
-                font-size: @font-size_main;/////////////
-               
-                transition: linear 0.5s;
+                font-size: @font-size_main;
+                transition: linear 0.2s;
             }
             .box .address a i {
                 position: absolute;
-               
                 background: @color_black_main;
                 width: 45px;
                 height: 40px;
-                
                 text-align: center;
-                line-height: 37px;////////////////
-                // margin-right: 10px;
+                line-height: 37px;
                 margin-left: -55px;
                 border-radius: 5px;
                 border: 1px solid @color_dlue_tone_five_main;
                 color: @color_dlue_tone_five_main;
-                font-size: @font-size_main + 10px;////////////////////
-                transition: linear 0.5s;
+                font-size: @font-size_main + 10px;
+                transition: linear 0.2s;
             }
             .box .address a:hover {
                 color: @color_yellow_main;
-                transition: linear 0.5s;  
+                transition: linear 0.2s;  
             } 
             .box .address a:hover i {
                 border: 1px solid @color_yellow_main; 
                 color: @color_yellow_main;
-                transition: linear 0.5s; 
+                transition: linear 0.2s; 
             } 
             .box form input, .box form textarea {
                 width: 100%;
@@ -152,13 +126,13 @@ body {
                 margin-bottom: 10px;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 300;
-                font-size: @font-size_main;///////////////////
+                font-size: @font-size_main;
                 color: @color_black_main;
             } 
             .box form label {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 300;
-                font-size: @font-size_main;//////////////////////
+                font-size: @font-size_main;
             }
             .box form label span {
                 color: @color_dlue_tone_five_main;   
@@ -172,18 +146,18 @@ body {
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
                 font-weight: 300;
-                font-size: @font-size_main;/////////////////
+                font-size: @font-size_main;
                 color: @color_dlue_tone_five_main;
                 border: 1px solid @color_dlue_tone_five_main;
                 border-radius: 3px;
                 cursor: pointer;
-                transition: linear 0.5s;  
+                transition: linear 0.2s;  
             }
             .box form button:hover {
                 border: 1px solid @color_yellow_main;
                 color: @color_yellow_main;
                 border-radius: 3px;
-                transition: linear 0.5s;
+                transition: linear 0.2s;
             }        
         }
         .author {
@@ -193,7 +167,7 @@ body {
             padding: 5px;
             font-family: 'Roboto', sans-serif;
             font-weight: 300;
-            font-size: @font-size_main;////////////
+            font-size: @font-size_main;
             text-transform: uppercase;
             overflow: hidden;
             p {
