--- a/src/styles/main-helpful.less
+++ b/src/styles/main-helpful.less
@@ -23,7 +23,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 0px;
@@ -64,7 +64,6 @@ body {
                 justify-content: space-around;      
                 align-items: center;
                 .helpful-section-menu {
-                    // height: 80px;
                     height: 100px;
                     max-width: 185px;
                     margin: 20px 10px 0px 10px;
@@ -81,7 +80,6 @@ body {
                         text-decoration: none;
                     }
                     a .menu-block-img {
-                        // height: 55px;
                         height: 75px;
                         width: 185px;
                         display: inline-block;
@@ -90,7 +88,6 @@ body {
                         justify-content: center; /*центрируем элемент по горизонтали */
                         align-items: center; /* и вертикали */     
                         .helpful-menu-img {
-                            // height: 55px;
                             height: 75px;
                             height: 100%;
                             padding-top: 4px;
@@ -118,7 +115,6 @@ body {
                         margin-top: 5px; 
                         .helpful-menu-text {
                             text-align: center;
-                            // color: @color_blue_main;
                             color: @color_black_main;
                             text-transform: uppercase;
                             font-family: 'Roboto', sans-serif;
