--- a/src/styles/main-page-array-product-cards.less
+++ b/src/styles/main-page-array-product-cards.less
@@ -31,9 +31,9 @@ body {
                         .caption-filtr-text {
                             color: @color_black_main;
                             text-transform: uppercase;
-                            font-size: @font-size_main + 2px;
-                            font-family: 'Roboto', sans-serif;
-                            font-weight: 400;
+                            font-size: @font-size_main + 3px;
+                            font-family: 'Montserrat', sans-serif;
+                            font-weight: 500;
                             letter-spacing: 0px;
                             word-spacing: 2px;
                             text-align: center;
@@ -175,9 +175,11 @@ body {
                                                 font-size: @font-size_main - 3px;
                                                 font-family: 'Roboto', sans-serif;
                                                 font-weight: 400;
+                                                transition: linear 0.2s; 
                                             }
                                             label:hover  {
                                                 color: @color_blue_main / 2;
+                                                transition: linear 0.2s; 
                                             }    
                                         }
                                     }
@@ -231,13 +233,14 @@ body {
                                                 font-size: @font-size_main - 3px;
                                                 font-family: 'Roboto', sans-serif;
                                                 font-weight: 400;
+                                                transition: linear 0.2s; 
                                             }
                                             label:hover  {
                                                 color: @color_blue_main / 2;
+                                                transition: linear 0.2s; 
                                             }    
                                         }
-                                    }
-                                    
+                                    }   
                                 }
                                 ul::-webkit-scrollbar-track {
                                     box-shadow: inset 0 0 1px @color_blue_main;
@@ -246,6 +249,7 @@ body {
                                 ul {
                                     scrollbar-width: thin; /* mozilla */
                                     scrollbar-color: @color_blue_main white;
+                                    transition: linear 0.2s; 
                                 }
                                 ul::-webkit-scrollbar {
                                     width: 7px;
@@ -257,6 +261,7 @@ body {
                                 }
                                 ul:hover {
                                     background: @color_white_main / 1.05;
+                                    transition: linear 0.2s; 
                                 }
                                 .checkbox-nav-all {
                                     text-align: center;
@@ -273,12 +278,13 @@ body {
                                         font-weight: 400;
                                         cursor: pointer;
                                         display: inline-block;
-                                        width: 100%;    
+                                        width: 100%;
+                                        transition: linear 0.2s;     
                                     }
                                     .label-all:hover  {
                                         color: @color_yellow_main;
-                                    }
-                                     
+                                        transition: linear 0.2s; 
+                                    }     
                                 }
                                 .hide-all ~ .checkbox-nav-all .label-all:after {
                                     content: "показать всё";
@@ -319,8 +325,9 @@ body {
                                     text-transform: uppercase;
                                     font-size: @font-size_main - 1px;
                                     font-family: 'Roboto', sans-serif;
-                                    font-weight: 500;
+                                    font-weight: 400;
                                     position: relative;
+                                    transition: linear 0.2s; 
                                 }
                                 .button-reset:before{
                                     content: "Очистить фильтр";
@@ -347,7 +354,7 @@ body {
                                     background: @color_blue_main;
                                     color: @color_yellow_main;
                                     font-size: @font-size_main;
-                                    font-weight: 400;
+                                    transition: linear 0.2s; 
                                 } 
                             }   
                         }    
@@ -376,7 +383,7 @@ body {
                             color: @color_black_main;
                             text-transform: uppercase;
                             font-size: @font-size_main + 10px;
-                            font-family: 'Roboto', sans-serif;
+                            font-family: 'Montserrat', sans-serif;
                             font-weight: 400;
                             letter-spacing: 0px;
                             word-spacing: 5px;
@@ -396,6 +403,7 @@ body {
                     .content2-catalog-cards-products {
                         padding: 0;
                         margin: 0;
+                        margin-top: 30px;
                         display: flex;
                         flex-wrap: wrap;
                         min-height: 260px;
@@ -438,7 +446,6 @@ body {
                                         font-family: 'Roboto', sans-serif;
                                         font-weight: 400;
                                         color: @color_white_main;
-                                        transition: linear 0.5s;
                                         text-transform: uppercase;
                                         text-align: center;
                                         display: block;
@@ -450,11 +457,13 @@ body {
                                         cursor: pointer;
                                         z-index: 2;
                                         height: 25px;
-                                        line-height: 25px; 
+                                        line-height: 25px;
+                                        transition: linear 0.5s;  
                                     }
                                     .section-info-label:hover {
                                         color: @color_yellow_main;
                                         background: @color_dlue_tone_three_main;
+                                        transition: linear 0.5s; 
                                     } 
                                     .section-info-nav {
                                         display: block;
@@ -466,9 +475,9 @@ body {
                                         max-height: 0px;
                                         font-size: 0;
                                         overflow: hidden;
-                                        transition: linear 0.5s;
                                         width: 0px;
                                         margin-left: 50%;
+                                        transition: linear 0.5s; 
                                         .section-info-li {
                                             list-style: none;
                                             margin: 0;
@@ -483,9 +492,9 @@ body {
                                                 width: 100%;
                                                 color: @color_white_main;
                                                 text-decoration: none;
-                                                opacity: 0;
-                                                transition: linear 0.5s;
+                                                opacity: 0; 
                                                 height: 33px;
+                                                transition: linear 0.5s; 
                                                 p {
                                                     position: relative;
                                                     top: 50%;
@@ -500,7 +509,7 @@ body {
                                         margin-left: 0%;
                                         max-height: 450px;
                                         font-size: 14px;
-                                        transition: linear 0.4s;  
+                                        transition: linear 0.5s;  
                                     }
                                     .section-info-label:hover ~ .section-info-nav .section-info-li .section-info-a {
                                         opacity: 1;
@@ -511,6 +520,7 @@ body {
                                 .products-section-base {
                                     margin-top: 3px;
                                     border: 1px solid @color_blue_main;
+                                    transition: linear 0.2s;
                                     a {
                                         text-decoration: none;
                                         text-transform: uppercase;
@@ -533,8 +543,8 @@ body {
                                             height: 35px;
                                             width: 100%;
                                             padding: 0 5px 0 5px;
-                                            background: rgb(180, 66, 0);
                                             background: @color_blue_main;
+                                            transition: linear 0.2s;
                                             p {
                                                 position: relative;
                                                 top: 50%;
@@ -550,12 +560,11 @@ body {
                                             font-family: 'Roboto', sans-serif;
                                             font-weight: 400;
                                             text-transform: uppercase;
-                                            transition: linear 0.5s;
                                             height: 30px;
                                             width: 100%;
                                             padding: 0 5px 0 5px;
-                                            background: rgb(4, 110, 9);
                                             background: @color_blue_main;
+                                            transition: linear 0.2s;
                                             p {
                                                 position: relative;
                                                 top: 50%;
@@ -569,12 +578,12 @@ body {
                                             font-family: 'Roboto', sans-serif;
                                             font-weight: 400;
                                             text-transform: uppercase;
-                                            transition: linear 0.5s;
                                             height: 40px;
                                             width: 100%;
                                             background: rgb(53, 4, 48);
                                             background: @color_blue_main;
                                             padding: 0 5px 0 5px;
+                                            transition: linear 0.2s;
                                             p {
                                                 position: relative;
                                                 top: 50%;
@@ -585,9 +594,11 @@ body {
                                 }
                                 .products-section-base:hover a div {
                                     color: @color_yellow_main;
+                                    transition: linear 0.2s;
                                 }
                                 .products-section-buy {
                                     margin-top: 4px;
+                                    transition: linear 0.2s;
                                     a {
                                         text-decoration: none;
                                         text-transform: uppercase;
@@ -602,11 +613,10 @@ body {
                                             text-transform: uppercase;
                                             letter-spacing: 1px;
                                             word-spacing: 7px;
-                                            transition: linear 0.5s;
                                             height: 25px;
                                             width: 100%;
-                                            background: rgb(4, 110, 9);
                                             background: @color_linear_main;
+                                            transition: linear 0.2s;
                                             p {
                                                 position: relative;
                                                 top: 50%;
@@ -625,22 +635,22 @@ body {
                                             font-family: 'Roboto', sans-serif;
                                             font-weight: 400;
                                             text-transform: uppercase;
-                                            transition: linear 0.5s;
                                             height: 30px;
                                             width: 100%;
                                             background: @color_blue_main;
                                             line-height: 30px;
+                                            transition: linear 0.2s;
                                         }
                                     }
                                 }
                                 .products-section-buy:hover a .content2-block-buy-card{
                                     color: @color_yellow_main;
-                                    
+                                    transition: linear 0.2s;   
                                 }
                                 .products-section-buy:hover a .content2-block-buy-cost{
                                     color: @color_yellow_main;
-                                    background: @color_dlue_tone_three_main;
-                                    
+                                    background: @color_dlue_tone_three_main; 
+                                    transition: linear 0.2s;  
                                 }
                             } 
                         }
