--- a/src/styles/main-page-cards-goods.less
+++ b/src/styles/main-page-cards-goods.less
@@ -93,10 +93,15 @@ body {
                                 overflow: hidden;
                                 border: 2px solid @color_linear_main;
                                 cursor: pointer;
+                                transition: linear 0.2s; 
                                 img {
                                     width: 100%;
                                     height: 100%;
                                 }
+                            }
+                            .small-pfoto:hover {
+                                border: 2px solid @color_dlue_tone_three_main;
+                                transition: linear 0.2s; 
                             }
                         }
                     }
@@ -122,14 +127,14 @@ body {
                                         color: @color_black_main;
                                         font-size: @font-size_main;
                                         font-family: 'Roboto', sans-serif;
-                                        font-weight: 300;                
+                                        font-weight: 400;                
                                         text-transform: uppercase;
                                         span {
                                             padding-left: 10px;
                                             color: @color_black_main;
                                             font-size: @font-size_main;
                                             font-family: 'Roboto', sans-serif;
-                                            font-weight: 500;
+                                            font-weight: 300;
                                             text-transform: uppercase;
                                         }
                                     }
@@ -181,7 +186,7 @@ body {
                                             text-transform: uppercase;
                                             font-size: @font-size_main + 15px;
                                             font-family: 'Roboto', sans-serif;
-                                            font-weight: 400;
+                                            font-weight: 500;
                                         }
                                     }
                                 }
@@ -207,15 +212,18 @@ body {
                                                 line-height: 40px;
                                                 width: 30px;
                                                 background: @color_blue_main;
+                                                transition: linear 0.2s; 
                                                 i {
                                                     height: 40px;
                                                     line-height: 40px;
                                                     color: @color_white_main;
                                                     font-size: @font-size_main;
+                                                    transition: linear 0.2s; 
                                                 }
                                             }
                                             .quantity-pieces-minus:hover i{
                                                 color: @color_yellow_main;
+                                                transition: linear 0.2s; 
                                             }
                                         }
                                         .quantity-pieces {
@@ -244,15 +252,18 @@ body {
                                                 line-height: 40px;
                                                 width: 30px;
                                                 background: @color_blue_main;
+                                                transition: linear 0.2s; 
                                                 i {
                                                     height: 40px;
                                                     line-height: 40px;
                                                     color: @color_white_main;
                                                     font-size: @font-size_main;
+                                                    transition: linear 0.2s; 
                                                 }
                                             }
                                             .quantity-pieces-plus:hover i{
                                                 color: @color_yellow_main;
+                                                transition: linear 0.2s; 
                                             }
                                         }
                                     }
@@ -273,6 +284,7 @@ body {
                                                 font-size: @font-size_main + 5px;
                                                 font-family: 'Roboto', sans-serif;
                                                 font-weight: 400;
+                                                transition: linear 0.2s; 
                                             }
                                         }
                                         .content3-block-buy-card:hover p {
