--- a/src/styles/main-page-catalog-pdf.less
+++ b/src/styles/main-page-catalog-pdf.less
@@ -21,7 +21,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
@@ -154,14 +154,13 @@ body {
                 max-width: 1260px;
                 align-items: center;
                 justify-content: center;
-    
                 margin-top: 30px;
                 .content3-list-title {
                     color: @color_dlue_dark_main;
                     text-transform: uppercase;
-                    font-size: @font-size_main + 7px;
-                    font-family: 'Roboto', sans-serif;
-                    font-weight: 400;
+                    font-size: @font-size_main + 5px;
+                    font-family: 'Montserrat', sans-serif;
+                    font-weight: 500;
                     text-transform: uppercase;
                     letter-spacing: 0px;
                     word-spacing: 10px;
