--- a/src/styles/main-page-general.less
+++ b/src/styles/main-page-general.less
@@ -23,7 +23,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
@@ -51,7 +51,7 @@ body {
                     word-spacing: 3px;
                     margin: 0px 0px -15px 0px;
                     padding-bottom: 40px;
-                    text-align:justify   
+                    text-align: justify;   
                 }
             }
             .content2-catalog {
@@ -82,7 +82,7 @@ body {
                         height: 295px;
                         width: 195px;
                         display: inline-block;
-                        overflow:hidden;
+                        overflow: hidden;
                         .content2-catalog-img {
                             width: 100%;
                             height: 100%;
@@ -146,71 +146,6 @@ body {
                     transition: linear 0.5s; 
                 }
             }
-            .content3-button {
-                .button-catalog {
-                    background-image: url("../images/fon_parts_three.jpg");
-                    background-size: cover; 
-                    background-size: 300px 70px;
-                    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
-                    border-radius: 4px;
-                    border-style: solid;
-                    border-width: 1px;
-                    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-                    text-decoration:none;
-                    display:block;
-                    color: @color_white_main;
-                    text-transform: uppercase;
-                    font-family: 'Roboto', sans-serif;
-                    font-weight: 400;
-                    font-size: @font-size_main;
-                    letter-spacing: 0px;
-                    word-spacing: 0px;
-                    width: 300px;
-                    line-height: 20px;
-                    margin: 20px auto;
-                    padding: 12px 12px;
-                    text-align: center;
-                    position: relative;
-                    -webkit-transition-duration: 0.3s;
-                    transition-duration: 0.3s;
-                    -webkit-transition-property: -webkit-transform;
-                    transition-property: transform;
-                    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-                    -webkit-transform: translateZ(0);
-                    -ms-transform: translateZ(0);
-                    transform: translateZ(0);
-                    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-                }
-                .button-catalog:before {
-                    pointer-events: none;
-                    position: absolute;
-                    z-index: -1;
-                    content: '';
-                    top: 100%;
-                    left: 5%;
-                    height: 10px;
-                    width: 90%;
-                    opacity: 0;
-                    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-                    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-                    -webkit-transition-duration: 0.3s;
-                    transition-duration: 0.3s;
-                    -webkit-transition-property: -webkit-transform, opacity;
-                    transition-property: transform, opacity;
-                }
-                .button-catalog:hover {
-                    -webkit-transform: translateY(-5px);
-                    -ms-transform: translateY(-5px);
-                    transform: translateY(-5px);
-                    color: @color_yellow_main;
-                }
-                .button-catalog:hover:before {
-                    opacity: 1;
-                    -webkit-transform: translateY(5px);
-                    -ms-transform: translateY(5px);
-                    transform: translateY(5px);
-                }
-            }
             .content4-description {
                 padding: 0;
                 margin: 0;
@@ -231,7 +166,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
@@ -259,7 +194,7 @@ body {
                     word-spacing: 3px;
                     margin: 0px 0px -15px 0px;
                     padding-bottom: 40px;
-                    text-align:justify   
+                    text-align:justify;   
                 }
             }
             .content5-partslist {
@@ -363,71 +298,6 @@ body {
                         color: @color_yellow_main;
                         transition: linear 0.5s;            
                     }      
-                }
-            }
-            .content6-button {
-                .button-partslist {
-                    background-image: url("../images/fon_parts_three.jpg");
-                    background-size: cover; 
-                    background-size: 300px 70px;
-                    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
-                    border-radius: 4px;
-                    border-style: solid;
-                    border-width: 1px;
-                    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-                    text-decoration:none;
-                    display:block;
-                    color: @color_white_main;
-                    text-transform: uppercase;
-                    font-family: 'Roboto', sans-serif;
-                    font-weight: 400;
-                    font-size: @font-size_main;
-                    letter-spacing: 0px;
-                    word-spacing: 0px;
-                    width: 300px;
-                    line-height: 20px;
-                    margin: 20px auto;
-                    padding: 12px 12px;
-                    text-align: center;
-                    position: relative;
-                    -webkit-transition-duration: 0.3s;
-                    transition-duration: 0.3s;
-                    -webkit-transition-property: -webkit-transform;
-                    transition-property: transform;
-                    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-                    -webkit-transform: translateZ(0);
-                    -ms-transform: translateZ(0);
-                    transform: translateZ(0);
-                    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-                }
-                .button-partslist:before {
-                    pointer-events: none;
-                    position: absolute;
-                    z-index: -1;
-                    content: '';
-                    top: 100%;
-                    left: 5%;
-                    height: 10px;
-                    width: 90%;
-                    opacity: 0;
-                    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-                    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-                    -webkit-transition-duration: 0.3s;
-                    transition-duration: 0.3s;
-                    -webkit-transition-property: -webkit-transform, opacity;
-                    transition-property: transform, opacity;
-                }
-                .button-partslist:hover {
-                    -webkit-transform: translateY(-5px);
-                    -ms-transform: translateY(-5px);
-                    transform: translateY(-5px);
-                    color: @color_yellow_main;
-                }
-                .button-partslist:hover:before {
-                    opacity: 1;
-                    -webkit-transform: translateY(5px);
-                    -ms-transform: translateY(5px);
-                    transform: translateY(5px);
                 }
             }
         }
