--- a/src/styles/main-page-parts-list-pdf.less
+++ b/src/styles/main-page-parts-list-pdf.less
@@ -23,7 +23,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 10px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 5px;
@@ -51,7 +51,7 @@ body {
                     word-spacing: 3px;
                     margin: 0px 0px -15px 0px;
                     padding-bottom: 40px;
-                    text-align:justify   
+                    text-align: justify;   
                 }
             }
             .content2-list {
@@ -69,7 +69,7 @@ body {
                     color: @color_black_main;
                     text-transform: uppercase;
                     font-size: @font-size_main + 7px;
-                    font-family: 'Roboto', sans-serif;
+                    font-family: 'Montserrat', sans-serif;
                     font-weight: 400;
                     text-transform: uppercase;
                     letter-spacing: 0px;
@@ -78,7 +78,7 @@ body {
                     margin-top: -10px;
                     border-bottom: 1px solid @color_blue_main;
                     position: relative;
-                    margin-bottom: 20px;
+                    margin-bottom: 40px;
                 }
                 .content2-list-title::before {
                     content: "";
@@ -87,7 +87,7 @@ body {
                     border-bottom: 1px solid @color_yellow_main;
                     position: absolute;
                 }   
-                .content2-list-section-wrapper{
+                .content2-list-section-wrapper {
                     height: 40px;
                     width: 95%;
                     margin-top: 3px;
@@ -154,6 +154,5 @@ body {
                 }   
             }
         }
-    }
-   
+    }  
 }
