--- a/src/styles/media-main-crumbs.less
+++ b/src/styles/media-main-crumbs.less
@@ -1,5 +1,6 @@
 
 @media (min-width: 540px) and (max-width: 760px) {
+    @font-size_main: 15px;
     body {
         #main { 
             .crumbs {
@@ -7,7 +8,7 @@
                 .crumbs-text {
                     li {
                         a {
-                            font-size: @font-size_main - 2px; 
+                            font-size: @font-size_main; 
                         }
                     }  
                 }
@@ -16,6 +17,7 @@
     }  
 }
 @media all and (max-width: 539px) {
+    @font-size_main: 13px;
     body {
         #main { 
             .crumbs {
@@ -23,7 +25,7 @@
                 .crumbs-text {
                     li {
                         a {
-                            font-size: @font-size_main - 4px;
+                            font-size: @font-size_main;
                         }
                     }  
                 }
