--- a/src/styles/media-main-page-array-product-cards.less
+++ b/src/styles/media-main-page-array-product-cards.less
@@ -112,7 +112,7 @@
                                             }  
                                         }
                                         .section-info-label:hover ~ .section-info-nav {
-                                            padding: 173px 0 0 0;/* 203? */
+                                            padding: 173px 0 0 0;/*  */
                                         }
                                     }
                                     .products-section-base {
