--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -24,9 +24,9 @@ body {
                     justify-content: space-between;
                     .contact-menu-li {
                         .contact-menu-a {
-                            font-family: 'Roboto', sans-serif;
-                            font-weight: 400;
-                            font-size: @font-size_main + 1px;
+                            font-family: 'Montserrat', sans-serif;
+                            font-weight: 300;
+                            font-size: @font-size_main;
                             color: @color_white_main;
                             text-decoration: none;
                             padding: 9px 13px 9px 13px;
