--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,24 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 @font-size_main: 17px;
 @color_black_main: #222222;
-@color_gray_tone_one_main:  #b8b8b8;  // border
+@color_gray_tone_one_main:  #b8b8b8;  /* border */
 @color_white_main: #f5f6fa;
 @color_yellow_main: #ffd000;
 @color_green_main: #0faa0f;
 @color_blue_main: #45698b;
-@color_dlue_dark_main: #314b62; // темно синий 
-@color_dlue_tone_one_main: #c8e5ff; // уровень 3 при hover
-@color_dlue_tone_two_main: #84c4ff; // уровень 3
-@color_dlue_tone_three_main: #5b8ab6; // уровень 2
+@color_dlue_dark_main: #314b62; /* темно синий */
+@color_dlue_tone_one_main: #c8e5ff; /* уровень 3 при hover */
+@color_dlue_tone_two_main: #84c4ff; /* уровень 3 */
+@color_dlue_tone_three_main: #5b8ab6; /* уровень 2 */
 @color_dlue_tone_four_main: #4f97db;
 @color_dlue_tone_five_main: #5aaaf5;
 @color_red_main: crimson;
-@color_fon_logo: #fcf8ec;////цвет под логотип
-@color_linear_main: #dcdde1;// цвет линия
+@color_fon_logo: #fcf8ec;/* цвет под логотип */
+@color_linear_main: #dcdde1;/* цвет линия */
 
  
 * {
@@ -43,7 +43,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    min-height: 830px;//////////////
+    min-height: 830px;/* */
     width: 100%;
     max-width: 1260px;
     background: @color_white_main;
@@ -57,6 +57,7 @@ body {
 @import url("main-page-catalog-pdf.less");
 @import url("main-page-array-product-cards.less");
 @import url("main-page-cards-goods.less");
+@import url("main-page-helpful-detail.less");
 @import url("main-pagination.less");
 @import url("main-handbook.less");
 @import url("main-helpful.less");
@@ -70,6 +71,7 @@ body {
 @import url("media-main-page-catalog-pdf.less");
 @import url("media-main-page-array-product-cards.less");
 @import url("media-main-page-cards-goods.less");
+@import url("media-main-page-helpful-detail.less");
 @import url("media-main-pagination.less");
 @import url("media-main-handbook.less");
 @import url("media-main-helpful.less");
